# solitairecpp

./: .gitignore  CMakeLists.txt  README.md
include/solitairecpp/: board.hpp  cards.hpp  error.hpp  leaderboard.hpp  logic.hpp  move_manager.hpp  solitairecpp.hpp  utils.hpp
src/: main.cpp
src/solitairecpp/: board.cpp  cards.cpp  leaderboard.cpp  logic.cpp  move_manager.cpp  solitaire.cpp  utils.cpp
src/solitairecpp/board/: board.cpp  foundations.cpp  reserve_stack.cpp  tableau.cpp
src/solitairecpp/move_manager/: moves.cpp  rollback.cpp
